# Translation_PDF

./: .gitignore  AGENTS.md  NLP_Project_Translate_EN_to_FR.ipynb  Project_Plan.md  README.md  Translate.ipynb  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  main.py  requirements.txt  schemas.py
backend/schemas/: __init__.py
benchmark/: metrics.py  visualization.py
data/: README.md  __init__.py
docs/: README.md  deployment.md
frontend/: app.py
models/lstm/: README.md  evaluate.py  train.py
models/transformer/: README.md  model.py  multihead_attention.py
notebooks/: lstm_training.ipynb  transformer_training.ipynb
services/pdf_translator/: README.md  __init__.py  generator.py
src/api/: main.py
src/benchmark/: evaluation.py
src/models/lstm/: model.py
src/models/transformer/: model.py
src/services/pdf_translator/: __init__.py  extractor.py  generator.py
